--- a/specia.html
+++ b/specia.html
@@ -3,6 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>SPECIA</title>
+    <link href="https://fonts.googleapis.com/css?family=Karla:400" rel="stylesheet" type="text/css">
 
     <!--
     All of your CSS must go in css/specia.css. Do not add styles to individual elements.
@@ -20,6 +21,10 @@
        <source src="body rolls.mp3" type="audio/mpeg">
     </audio>-->
     <img id="sp-body-rolls" style="display: none" src="body_rolls.png">
+</div>
+
+<div id="return-container">
+    <a href="//www.matthewyu.ca">Return to Main Site</a>
 </div>
 
 <script src="js/ext/underscore.js"></script>
